Test/DaemonSet.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mydaemon
spec:
  selector:
    matchLabels:
      app: nginx
      tier: frontend
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
        tier: frontend
    spec:
      nodeSelector:
        disk: ssd
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
