Test/NetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress

ingress:
  - from:
      - ipBlock:
          cidr: 172.0.0.0/16
          except:
            - 172.17.1.0/24

      - namespaceSelector:
          matchLabels:
            project: myproject

      - podSelector:
          matchLabels:
            tier: backend
    ports:
      - protocol: TCP
        port: 80

egress:
  - to:
      - ipBlock:
          cidr: 172.0.0.0/16
    ports:
      - protocol: TCP
        port: 5316
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-income-deny-for-all
spec:
 podSelector: {}
 policyTypes:
   - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-outgoing-deny-for-all
spec:
  podSelector: {}
  policyTypes:
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetwprkPolicy
metadata:
  name: allow-all-income-traffic-for-all
spec:
  podSelector: {}
  ingress:
   - {}
---
apiVersion: networking.k8s.io/v1
kind: NetwprkPolicy
metadata:
  name: allow-all-outgoing-traffic-for-all
spec:
  podSelector: {}
  egress:
   - {}
