Test/ServiceCI.yml
apiVersion: v1
kind: Service
metadata:
  name: svcnginxci
spec:
  selector:
    app: nginx
    tier: frontend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
      clusterIP: None
