Test/ServiceLB.yml
apiVersion: v1
kind: Service
metadata:
  name: svcnginxnp
spec:
  selector:
    app: nginx
    tier: frontend
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      name: http
  clusterIP: 10.0.240.3
  loadBalancerIP: 172.28.16.14
  sessionAffinity: None
  externalTrafficPolicy: Local
