Test/ServiceNP.yml
apiVersion: v1
kind: Service
metadata:
  name: svcnginxnp
spec:
  selector:
    app: nginx
    tier: frontend
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      name: http
      nodePort: 30001
